--- a/modlist.html
+++ b/modlist.html
@@ -4,7 +4,7 @@ layout: page
 permalink: /modlist
 ---
 
-<link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} " />
+<link rel="stylesheet" href="{{- 'assets/css/core.css' | https://raw.githubusercontent.com/AlsoKnownAsT/T-TTK/master/_data/modlist.json -}} " />
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
 <input type="text" class="search" id="modInput" onkeyup="filterTable('mod')"
